--- a/index.html
+++ b/index.html
@@ -94,6 +94,40 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Du An 3</h1>
+    <header class="header">
+      <div class="container">
+        <div class="header-top">
+          <!-- logo -->
+          <a href="#!"
+            ><img
+              src="./assets/img/logo_icon/logo.svg"
+              alt="Shine Smile"
+              class="logo"
+          /></a>
+          <!-- nav menu -->
+          <nav class="navbar">
+            <ul class="navbar__list">
+              <li class="navbar__item">
+                <a href="#!" class="navbar__link navbar__link--active">Home</a>
+              </li>
+              <li class="navbar__item">
+                <a href="#!" class="navbar__link">Services</a>
+              </li>
+              <li class="navbar__item">
+                <a href="#!" class="navbar__link">About</a>
+              </li>
+              <li class="navbar__item">
+                <a href="#!" class="navbar__link">Doctors</a>
+              </li>
+            </ul>
+          </nav>
+          <!-- cta group -->
+          <div class="action">
+            <a href="#!" class="action__login">Log In</a>
+            <a href="#!" class="btn action__signup">Sign Up</a>
+          </div>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
