--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
 
     <!-- main -->
     <main>
+      <!-- service -->
       <section class="service">
         <div class="container">
           <h2 class="service__heading section-heading">Our services</h2>
@@ -261,6 +262,93 @@
           </div>
         </div>
       </section>
+      <!-- work -->
+      <section class="work">
+        <div class="container">
+          <h2 class="section-heading">How it works</h2>
+          <p class="section-desc work__desc">
+            Exceptional dental care for all ages. Your great smile begins with a
+            great dentist.
+          </p>
+          <div class="work__list">
+            <!-- item 1 -->
+            <section class="work-item">
+              <img
+                src="./assets/img/logo_icon/Orion_search.svg"
+                alt="Search doctor"
+                class="work-item__icon"
+              />
+              <h3 class="work-item__heading">Search doctor</h3>
+              <p class="work-item__desc">
+                Search a doctor by education, qualifications or
+                experience-contact for inquiry.
+              </p>
+              <a href="#!" class="work-item__more">Learn More</a>
+            </section>
+
+            <!-- item 2 -->
+            <section class="work-item">
+              <img
+                src="./assets/img/logo_icon/Orion_find-user.svg"
+                alt="Search doctor"
+                class="work-item__icon"
+              />
+              <h3 class="work-item__heading">Find best doctor</h3>
+              <p class="work-item__desc">
+                Search a doctor by education, qualifications or
+                experience-contact for inquiry.
+              </p>
+              <a href="#!" class="work-item__more">Learn More</a>
+            </section>
+
+            <!-- item 3 -->
+            <section class="work-item">
+              <img
+                src="./assets/img/logo_icon/Orion_first-aid-kit.svg"
+                alt="Search doctor"
+                class="work-item__icon"
+              />
+              <h3 class="work-item__heading">Get treatment</h3>
+              <p class="work-item__desc">
+                Search a doctor by education, qualifications or
+                experience-contact for inquiry.
+              </p>
+              <a href="#!" class="work-item__more">Learn More</a>
+            </section>
+          </div>
+        </div>
+      </section>
+      <!-- blog -->
+      <div class="blog">
+        <div class="container">
+          <div class="blog__main">
+            <!-- blog-left -->
+            <div class="blog__image">
+              <img
+                src="./assets/img/blog-1.jpg"
+                alt="Take back your smile with shine."
+                class="blog__img blog__image--large"
+              />
+              <img
+                src="./assets/img/blog-2.jpg"
+                alt="Take back your smile with shine."
+                class="blog__img blog__image--small"
+              />
+            </div>
+            <!-- blog-right -->
+            <section class="blog__content">
+              <h2 class="section-heading blog__heading">
+                Take back your smile with shine.
+              </h2>
+              <p class="section-desc blog__desc">
+                If you’re missing multiple teeth due to decay, injury, or the
+                natural aging process, dentures might be the perfect solution.
+              </p>
+              <a href="#!" class="btn blog__btn">Learn More</a>
+            </section>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
