--- a/index.html
+++ b/index.html
@@ -319,21 +319,23 @@
         </div>
       </section>
       <!-- blog -->
-      <div class="blog">
+      <section class="blog">
         <div class="container">
           <div class="blog__main">
             <!-- blog-left -->
             <div class="blog__image">
-              <img
-                src="./assets/img/blog-1.jpg"
-                alt="Take back your smile with shine."
-                class="blog__img blog__image--large"
-              />
-              <img
-                src="./assets/img/blog-2.jpg"
-                alt="Take back your smile with shine."
-                class="blog__img blog__image--small"
-              />
+              <figure class="blog__imgs">
+                <img
+                  src="./assets/img/blog-1.jpg"
+                  alt="Take back your smile with shine."
+                  class="blog__img blog__image--large"
+                />
+                <img
+                  src="./assets/img/blog-2.jpg"
+                  alt="Take back your smile with shine."
+                  class="blog__img blog__image--small"
+                />
+              </figure>
             </div>
             <!-- blog-right -->
             <section class="blog__content">
@@ -348,7 +350,117 @@
             </section>
           </div>
         </div>
-      </div>
+      </section>
+      <!-- feedback -->
+      <section class="feedback">
+        <div class="container">
+          <!-- feedback header -->
+          <div class="feedback-header">
+            <h2 class="section-heading feedback__heading">
+              Our virtual dentist
+            </h2>
+            <a href="#!" class="btn feedback__btn">Meet our dentist</a>
+          </div>
+          <!-- feedback destist -->
+          <div class="feedback__list">
+            <!-- item 1 -->
+            <article class="feedback-item">
+              <div class="feedback-item__img">
+                <img
+                  src="./assets/img/f1.png"
+                  alt="Dr. Essence Page"
+                  class="feedback-item__thumb"
+                />
+              </div>
+              <h3 class="feedback-item__name">Dr. Essence Page</h3>
+              <p class="feedback-item__desc">
+                DDS, California - Linda University
+              </p>
+            </article>
+
+            <!-- item 2 -->
+            <article class="feedback-item">
+              <div class="feedback-item__img">
+                <img
+                  src="./assets/img/f2.png"
+                  alt="Dr. Essence Page"
+                  class="feedback-item__thumb"
+                />
+              </div>
+              <h3 class="feedback-item__name">Dr. Essence Page</h3>
+              <p class="feedback-item__desc">
+                DDS, California - Linda University
+              </p>
+            </article>
+
+            <!-- item 3 -->
+            <article class="feedback-item">
+              <div class="feedback-item__img">
+                <img
+                  src="./assets/img/f3.png"
+                  alt="Dr. Essence Page"
+                  class="feedback-item__thumb"
+                />
+              </div>
+              <h3 class="feedback-item__name">Dr. Essence Page</h3>
+              <p class="feedback-item__desc">
+                DDS, California - Linda University
+              </p>
+            </article>
+
+            <!-- item 4 -->
+            <article class="feedback-item">
+              <div class="feedback-item__img">
+                <img
+                  src="./assets/img/f4.png"
+                  alt="Dr. Essence Page"
+                  class="feedback-item__thumb"
+                />
+              </div>
+              <h3 class="feedback-item__name">Dr. Essence Page</h3>
+              <p class="feedback-item__desc">
+                DDS, California - Linda University
+              </p>
+            </article>
+          </div>
+          <!-- control btn -->
+          <div class="control feedback__control">
+            <button class="control__btn">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="6"
+                height="12"
+                viewBox="0 0 6 12"
+                fill="none"
+              >
+                <path
+                  d="M5.5 1L0.5 6L5.5 11"
+                  stroke="currentColor"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
+            </button>
+            <button class="control__btn">
+              <svg
+                class="control__btn--next"
+                xmlns="http://www.w3.org/2000/svg"
+                width="6"
+                height="12"
+                viewBox="0 0 6 12"
+                fill="none"
+              >
+                <path
+                  d="M5.5 1L0.5 6L5.5 11"
+                  stroke="currentColor"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
+            </button>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
