--- a/index.html
+++ b/index.html
@@ -461,6 +461,45 @@
           </div>
         </div>
       </section>
+      <!-- install mobile -->
+      <section class="install">
+        <div class="container">
+          <div class="install__inner">
+            <!-- install left -->
+            <figure class="install__img">
+              <img
+                src="./assets/img/install_phone.png"
+                alt="Take back your smile with dentures"
+                class="install__phone"
+              />
+            </figure>
+            <!-- install right -->
+            <section class="install__content">
+              <h2 class="section-heading install__heading">
+                Take back your smile with dentures
+              </h2>
+              <p class="section-desc install__desc">
+                If you’re missing multiple teeth due to decay, injury, or the
+                natural aging process, dentures might be the perfect solution.
+              </p>
+              <div class="install_btn">
+                <a href="#!"
+                  ><img
+                    src="./assets/img/logo_icon/chplay.svg"
+                    alt="ch play"
+                    class="install__btn--chplay"
+                /></a>
+                <a href="#!"
+                  ><img
+                    src="./assets/img/logo_icon/appstore.svg"
+                    alt="app store"
+                    class="install__btn--appstore"
+                /></a>
+              </div>
+            </section>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
