--- a/index.html
+++ b/index.html
@@ -500,6 +500,100 @@
           </div>
         </div>
       </section>
+      <!-- news -->
+      <section class="news">
+        <div class="container">
+          <div class="news__inner">
+            <!-- news left -->
+            <section class="news__left">
+              <h2 class="section-heading news__heading">
+                Read Latest News & Events.
+              </h2>
+              <a href="#!" class="news__more">Read All Blog</a>
+              <!-- control btn -->
+              <div class="control news__control">
+                <button class="control__btn">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="6"
+                    height="12"
+                    viewBox="0 0 6 12"
+                    fill="none"
+                  >
+                    <path
+                      d="M5.5 1L0.5 6L5.5 11"
+                      stroke="currentColor"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                  </svg>
+                </button>
+                <button class="control__btn">
+                  <svg
+                    class="control__btn--next"
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="6"
+                    height="12"
+                    viewBox="0 0 6 12"
+                    fill="none"
+                  >
+                    <path
+                      d="M5.5 1L0.5 6L5.5 11"
+                      stroke="currentColor"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                  </svg>
+                </button>
+              </div>
+            </section>
+            <!-- news right -->
+            <div class="news__list">
+              <!-- item 1 -->
+              <article class="news-item">
+                <figure class="news-item__image">
+                  <img
+                    src="./assets/img/vac1.jpg"
+                    alt="Read Latest News & Events."
+                    class="news-item__thumb"
+                  />
+                </figure>
+                <section class="news-item__body">
+                  <h3 class="news-item__heading">
+                    Key Considerations for Regulatory Compliant.
+                  </h3>
+                  <p class="news-item__desc">
+                    It’s easy to think about medical care from a narrow
+                    perspective. You go to the hospital.
+                  </p>
+                  <a href="#!" class="news-item__more">Learn More</a>
+                </section>
+              </article>
+
+              <!-- item 2 -->
+              <article class="news-item">
+                <figure class="news-item__image">
+                  <img
+                    src="./assets/img/vac2.jpg"
+                    alt="Read Latest News & Events."
+                    class="news-item__thumb"
+                  />
+                </figure>
+                <section class="news-item__body">
+                  <h3 class="news-item__heading">
+                    Key Considerations for Regulatory Compliant.
+                  </h3>
+                  <p class="news-item__desc">
+                    It’s easy to think about medical care from a narrow
+                    perspective. You go to the hospital.
+                  </p>
+                  <a href="#!" class="news-item__more">Learn More</a>
+                </section>
+              </article>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
